# comp-vision-exercises

./: readme.md
src/: 1readImg.cpp  2basicFunc.cpp  3sizingCrop.cpp  4DrawShapes.cpp  5ColorDetection.cpp  7FeatureTracking.cpp  8ObjectDetection.cpp  CMakeLists.txt
src/3D_CompVision/3D_processing/: basic.ipynb  basic.py  bunny.pcd
src/CNN/: cnn.ipynb  nn_mnist.ipynb
src/NeuralNets/: ML for tabular data.ipynb
src/laneDetection/: CMakeLists.txt  main.cpp
